新增字典树黑名单过滤非法操作；使用Java原生SecurityManager过滤权限