@@ -3,6 +3,7 @@ package com.mirror.hoj.codesandbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.WordTree;
 import com.mirror.hoj.codesandbox.model.ExecuteCodeRequest;
 import com.mirror.hoj.codesandbox.model.ExecuteCodeResponse;
 import com.mirror.hoj.codesandbox.model.ExecuteMessage;
@@ -25,13 +26,40 @@ import java.util.UUID;
 @Slf4j
 public class JavaNativeCodeSandbox implements CodeSandbox {
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
+
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
+
+    private static final String SECURITY_MANAGER_CLASS_NAME = "DefaultSecurityManager";
+
+    private static final String SECURITY_MANAGER_PATH = "H:\\MyProject\\hoj-code-sandbox\\src\\main\\resources\\security";
+
+    private static final List<String> BlackList = Arrays.asList("Runtime", "Process", "File",
+            "FileInputStream", "FileOutputStream", "FileReader", "FileWriter", "Files",
+            "URL", "URI", "URLClassLoader", "URLConnection", "HttpURLConnection",
+            "DatagramSocket", "ServerSocket", "Socket", "SocketAddress", "SocketException",
+            "SocketImpl", "SocketOptions", "SocketTimeoutException", "StreamTokenizer",
+            "StringTokenizer", "ZipInputStream", "ZipOutputStream", "ZipFile",
+            "ZipEntry", "ZipException", "ZipError", "ZipConstants"
+    );
+    private static final WordTree WORD_TREE;
+
+    static {
+        //初始化字典树
+        WORD_TREE = new WordTree();
+        //把操作黑名单加入到字典树中
+        WORD_TREE.addWords(BlackList);
+    }
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+//        System.setSecurityManager(new DefaultSecurityManager());
         List<String> inputList = executeCodeRequest.getInputList();
         String code = executeCodeRequest.getCode();
         String language = executeCodeRequest.getLanguage();
+        //检查代码中是否有黑名单操作
+        if (WORD_TREE.isMatch(code)) {
+            return getErrorResponse(new RuntimeException("代码中包含黑名单操作"));
+        }
         //判断全局代码目录是否存在，不存在就创建
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
@@ -59,10 +87,11 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         List<JudgeInfo> judgeInfoList = new ArrayList<>();
         //运行class文件，获取结果
         for (String input : inputList) {
-            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, input);
+//            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, input);
+            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s%s%s -Djava.security.manager=%s Main %s", userCodeParentPath, File.pathSeparator, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, input);
+
             Process runProcess = null;
             try {
-
                 runProcess = Runtime.getRuntime().exec(runCmd);
                 //TODO 如果超时，直接返回，然后记录一下是第几个超时
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
@@ -82,9 +111,9 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         }
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
-        for(ExecuteMessage executeMessage : executeMessageList){
+        for (ExecuteMessage executeMessage : executeMessageList) {
             //碰到错误就直接返回
-            if(StrUtil.isNotBlank(executeMessage.getErrorMessage())){
+            if (StrUtil.isNotBlank(executeMessage.getErrorMessage())) {
                 executeCodeResponse.setStatus(3);
                 executeCodeResponse.setMessage(executeMessage.getErrorMessage());
                 break;
@@ -94,10 +123,10 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         executeCodeResponse.setOutputList(outputList);
         JudgeInfo totalJudgeInfo = new JudgeInfo();
         //正常运行执行所有用例
-        if(outputList.size() == executeMessageList.size()){
+        if (outputList.size() == executeMessageList.size()) {
             executeCodeResponse.setStatus(1);
         }
-        totalJudgeInfo.setTime(totalRunTime/executeMessageList.size());
+        totalJudgeInfo.setTime(totalRunTime / executeMessageList.size());
         totalJudgeInfo.setMemory(0L);
         executeCodeResponse.setJudgeInfoList(judgeInfoList);
 
